--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -11,4 +11,12 @@
     <packaging>jar</packaging>
 
     <name>service-api</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.mvnsearch</groupId>
+            <artifactId>microservices-annotator</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+    </dependencies>
 </project>
